--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FleetMind AI - Warehouse Fleet Orchestration</title>
+    <title>Markster FleetMind AI - Warehouse Fleet Orchestration</title>
     <link rel="stylesheet" href="/static/style.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><rect width='32' height='32' rx='6' fill='%230a0a0a'/><circle cx='16' cy='16' r='8' fill='none' stroke='%2300cc44' stroke-width='2'/><circle cx='16' cy='16' r='3' fill='%2300cc44'/></svg>">
 </head>
@@ -20,7 +20,7 @@
                     <line x1="3" y1="12" x2="6" y2="12"/>
                     <line x1="18" y1="12" x2="21" y2="12"/>
                 </svg>
-                <span>Fleet<span class="logo-accent">Mind</span> AI</span>
+                <span><span class="logo-muted">Markster</span> Fleet<span class="logo-accent">Mind</span> AI</span>
             </div>
             <div class="status-badge live">
                 <span class="dot"></span>
@@ -39,6 +39,11 @@
             <div class="metric">
                 <span>WS:</span>
                 <span class="value" id="ws-status">Connecting</span>
+            </div>
+            <div class="topbar-credit">
+                <a href="https://www.linkedin.com/in/ivanivanka/" target="_blank" rel="noreferrer noopener">Demo by Ivan @ Markster</a>
+                <span class="sep">•</span>
+                <a href="https://wa.me/12127181149" target="_blank" rel="noreferrer noopener">WhatsApp: +1 212 718 1149</a>
             </div>
         </div>
     </div>
