feat(sim): add reset and improve long-run stability

--- a/static/index.html
+++ b/static/index.html
@@ -111,6 +111,7 @@
             <div class="controls">
                 <button class="btn primary" onclick="addTask()">+ Add Task</button>
                 <button class="btn" onclick="requestAIInsight()">AI Insight</button>
+                <button class="btn" onclick="resetDemo()">Reset Demo</button>
                 <button class="btn danger" id="estop-btn" onclick="emergencyStopAll()">E-Stop All</button>
             </div>
             <div class="action-status" id="action-status"></div>
